--- a/Atividades/AulaEntityFramework/AulaEntityFramework/Views/Pessoas/Index.cshtml
+++ b/Atividades/AulaEntityFramework/AulaEntityFramework/Views/Pessoas/Index.cshtml
@@ -9,6 +9,8 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+@if (Model.Count() > 0)
+{
 <table class="table">
     <thead>
         <tr>
@@ -17,6 +19,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BirthDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.BirthDate.Month)
             </th>
             <th></th>
         </tr>
@@ -28,7 +33,14 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.BirthDate)
+                <a asp-action="Index" asp-controller="Pessoas" asp-route-bdt="@item.BirthDate.ToShortDateString()">
+                    @item.BirthDate.ToShortDateString()
+                </a>
+            </td>
+            <td>
+                <a asp-action="Index" asp-controller="Pessoas" asp-route-gbm="@item.BirthDate.Month">
+                    @item.BirthDate.ToString("MMM")
+                </a>
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
@@ -38,4 +50,11 @@
         </tr>
 }
     </tbody>
-</table>
+    </table>
+}
+else
+{
+    <div class="row col-12">
+        Não foram encontrados dados.
+    </div>
+}
