--- a/Atividades/EFDatabaseFirst/EFTransporteAereo/EFTransporteAereo/Views/Shared/_Layout.cshtml
+++ b/Atividades/EFDatabaseFirst/EFTransporteAereo/EFTransporteAereo/Views/Shared/_Layout.cshtml
@@ -23,7 +23,37 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aeronaves" asp-action="Index">Aeronaves</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Aeroportos" asp-action="Index">Aeroportos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Assentoes" asp-action="Index">Assentos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Passageiroes" asp-action="Index">Passageiros</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Fabricantes" asp-action="Index">Fabricantes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Pilotoes" asp-action="Index">Pilotos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Escalas" asp-action="Index">Escalas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Voos" asp-action="Index">Voos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AssentosPassageirosVoos" asp-action="Index">AssentosPassageirosVoos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="TiposAeronaves" asp-action="Index">TiposAeronaves</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="VoosEscalas" asp-action="Index">VoosEscalas</a>
                         </li>
                     </ul>
                 </div>
