--- a/Atividades/EFDatabaseFirst/EFTransporteAereo/EFTransporteAereo/Views/Fabricantes/Index.cshtml
+++ b/Atividades/EFDatabaseFirst/EFTransporteAereo/EFTransporteAereo/Views/Fabricantes/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Fabricante1)
+                Fabricante
             </th>
             <th></th>
         </tr>
