--- a/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Partidaequipes/Index.cshtml
+++ b/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Partidaequipes/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Vencedor)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Equipe.Id)
+                @Html.DisplayFor(modelItem => item.Equipe.Nome)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Partida.Id)
