--- a/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Equipechavetorneios/Index.cshtml
+++ b/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Equipechavetorneios/Index.cshtml
@@ -34,13 +34,13 @@
                 @Html.DisplayFor(modelItem => item.Pontos)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Chave.Id)
+                @Html.DisplayFor(modelItem => item.Chave.Chave1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Equipe.Id)
+                @Html.DisplayFor(modelItem => item.Equipe.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Torneio.Id)
+                @Html.DisplayFor(modelItem => item.Torneio.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
