--- a/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Partidas/Index.cshtml
+++ b/Exercícios/Torneio/TorneioEF/TorneioEF/Views/Partidas/Index.cshtml
@@ -43,16 +43,16 @@
                 @Html.DisplayFor(modelItem => item.DataPartida)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Chave.Id)
+                @Html.DisplayFor(modelItem => item.Chave.Chave1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Modalidade.Id)
+                @Html.DisplayFor(modelItem => item.Modalidade.Modalidade1)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Rodada.Id)
+                @Html.DisplayFor(modelItem => item.Rodada.Descricao)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Torneio.Id)
+                @Html.DisplayFor(modelItem => item.Torneio.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
